# norush

./: .env  .gitignore  Cargo.toml  docker-compose.yml  tailwind.config.js  tailwind.sh
migrations/: 0001_table_todos.sql
src/: app.rs  db.rs  lib.rs  main.rs  statics.rs  ui.rs
static/: tailwind.css
templates/: board.html  card.html  index.html  login.html  state.html
tests/: app.rs
