[package]
name = "norush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.1", features = ["macros", "http2"] }
axum-test = "14.0.0"
rust-embed = { version = "8.0.0", features = ["axum"] }
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
