[package]
name = "norush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
serde = "1"
velvet-web = "0.1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
rust-embed = { version = "8.5", features = ["axum"] }
dotenv = "0.15.0"
sqlx = {version = "0.8", features = ["sqlite"]}

[dev-dependencies]
axum = "0.7"
axum-test = "15.3"

[profile.dev.package.askama_derive]
opt-level = 3

