[package]
name = "norush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
serde = "1"
velvet-web = { version = "0.6", features = ["sqlite", "login"] }
#velvet-web = { path = "../velvet", features = ["sqlite", "login"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
rust-embed = { version = "8.5", features = ["axum"] }
dotenvy = "0.15.7"
sqlx = {version = "0.8", features = ["sqlite"]}

[dev-dependencies]
axum = "0.7"
axum-test = "16.1"

[profile.dev.package.askama_derive]
opt-level = 3

